--- a/src/app/components/home_web/bodyweb/bodyweb.component.html
+++ b/src/app/components/home_web/bodyweb/bodyweb.component.html
@@ -8,247 +8,25 @@
     <div class="row">
         <div class="col-10">
             <div class="row">
-                <div class="col">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
+                <div *ngFor="let sucursal of sucursales">
+                    <div class="col">
+                        <div class="card fondo-card">
+                            <img *ngIf="sucursal.imagen" [src]="sucursal.imagen" alt="Card image cap" width="300px" height="220px">
+                            <img *ngIf="!sucursal.imagen" src="/assets/img/restaurante/res2.jpg" alt="Card image cap" width="300px" height="220px">
+                            <!-- <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a> -->
+                            <div class="card-body">
+                                <p>
+                                    <a href="#" class="card-link">
+                                        <h5 class="card-title text-center font-card-title">{{sucursal.razon_social}}</h5>
+                                    </a>
+                                </p>
+                                <p class="card-text font-card-body text-justify">{{sucursal.descripcion}}</p>
                             </div>
-                            <div class="carousel-item">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-
-
                         </div>
-                        <a class="carousel-control-prev " href="#carouselExampleIndicators " role="button " data-slide="prev ">
-                            <span class="carousel-control-prev-icon " aria-hidden="true "></span>
-                            <span class="sr-only ">Previous</span>
-                        </a>
-                        <a class="carousel-control-next " href="#carouselExampleIndicators " role="button " data-slide="next ">
-                            <span class="carousel-control-next-icon " aria-hidden="true "></span>
-                            <span class="sr-only ">Next</span>
-                        </a>
                     </div>
                 </div>
             </div>
 
-            <div class="row ">
-                <div class="col ">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-
-
-                            </div>
-                            <div class="carousel-item">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <div class="card fondo-card" style="width: 18rem;">
-                                                <a href="#"> <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px"></a>
-                                                <div class="card-body">
-                                                    <p>
-                                                        <a href="#" class="card-link">
-                                                            <h5 class="card-title text-center font-card-title">Nombre Restaurante</h5>
-                                                        </a>
-                                                    </p>
-                                                    <p class="card-text font-card-body text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-
-
-                            </div>
-
-                        </div>
-                        <a class="carousel-control-prev " href="#carouselExampleIndicators " role="button " data-slide="prev ">
-                            <span class="carousel-control-prev-icon " aria-hidden="true "></span>
-                            <span class="sr-only ">Previous</span>
-                        </a>
-                        <a class="carousel-control-next " href="#carouselExampleIndicators " role="button " data-slide="next ">
-                            <span class="carousel-control-next-icon " aria-hidden="true "></span>
-                            <span class="sr-only ">Next</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="col-2 ">
             <app-promotions></app-promotions>
