--- a/src/app/components/formsparts/platoespecial-create/platoespecial-create.component.html
+++ b/src/app/components/formsparts/platoespecial-create/platoespecial-create.component.html
@@ -17,9 +17,9 @@
                                     <div *ngIf="(submitted && formControls.nombre.errors && formControls.nombre.errors.required) && formControls.nombre.dirty || (formControls.nombre.errors?.required && formControls.nombre.touched && !submitted)">
                                         <p class="validate-error">El campo requerido</p>
                                     </div>
-                                    <div *ngIf="formControls.nombre.errors?.pattern">
+                                   <!--  <div *ngIf="formControls.nombre.errors?.pattern">
                                         <p class="validate-error">Caracteres no validos</p>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="precio">Precio Bs.</label>
