--- a/src/app/components/formsparts/platoespecial-create/platoespecial-create.component.html
+++ b/src/app/components/formsparts/platoespecial-create/platoespecial-create.component.html
@@ -43,10 +43,10 @@
                                 </div>
                             </div>
                             <div class="form-row">
-                                <div class="col-md-6">
+                                <!-- <div class="col-md-6">
                                     <label for="imagen">Imagen</label>
                                     <input type="file" name="imagen" class="form-control-file" accept=".png, .jpg, .jpeg" #fileInput (change)="fileProgress($event)">
-                                </div>
+                                </div> -->
 
                                 <div class="col-md-6">
                                     <div class="d-flex justify-content-center">
