--- a/src/app/components/plato-especial/plato-especial.component.html
+++ b/src/app/components/plato-especial/plato-especial.component.html
@@ -13,25 +13,25 @@
                             data-target="#modalUser">Nuevo</button>
                         -->
                         <a routerLink="/admin/create-platoespecial" routerLinkActive="router-link-active" class="ordena btn btn-success float-right mb-3">Nuevo</a>
-                        <input type="text" value="" class=" float-md-right mr-3 mt-2" placeholder="Search..." [(ngModel)]="keyword" (ngModelChange)="searchByKeyword()">
+                        <input type="text" value="" class=" float-md-right mr-3 mt-2" placeholder="Search...">
                         <div class="dropdown ordena float-md-right mr-3">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <!-- {{role? role: 'SHOW ROLES'}} -->
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" (click)="searchByRoles('')">Todos</a>
-                                <a class="dropdown-item" (click)="searchByRoles('')">Restaurantes</a>
+                                <!-- <a class="dropdown-item" (click)="searchByRoles('')">Todos</a>
+                                <a class="dropdown-item" (click)="searchByRoles('')">Restaurantes</a> -->
                             </div>
                         </div>
                         <div class="dropdown ordena float-md-right mr-3">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {{pageSize}}
+                                <!-- {{pageSize}} -->
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" (click)="configpagination(10)">10</a>
+                                <!-- <a class="dropdown-item" (click)="configpagination(10)">10</a>
                                 <a class="dropdown-item" (click)="configpagination(25)">25</a>
                                 <a class="dropdown-item" (click)="configpagination(50)">50</a>
-                                <a class="dropdown-item" (click)="configpagination(100)">100</a>
+                                <a class="dropdown-item" (click)="configpagination(100)">100</a> -->
                             </div>
                         </div>
                     </div>
@@ -42,9 +42,9 @@
                                     <th>
                                         ID
                                     </th>
-                                    <th>
+                                    <!-- <th>
                                         ID_SUCURSAL
-                                    </th>
+                                    </th> -->
                                     <th>
                                         Nombre
                                     </th>
@@ -62,19 +62,20 @@
                                     </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let user of users index as i">
-                                        <!-- <td scope="row">
+                                    <tr *ngFor="let plato of platos index as i">
+                                        <td scope="row">
                                             {{i+1}}
                                         </td>
                                         <td>
-                                            {{user.nombres}}
+                                            {{plato.nombre}}
                                         </td>
                                         <td>
-                                            {{user.apellidos}}
+                                            {{plato.precio}}
                                         </td>
                                         <td>
-                                            {{user.userName}}
+                                            {{plato.descripcion}}
                                         </td>
+                                                                <!--
                                         <td>
                                             {{user.email}}
                                         </td>
@@ -100,10 +101,10 @@
                             </table>
                         </div>
                         <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-12 d-flex justify-content-center">
+                            <!-- <div class="col-xs-12 col-sm-12 col-md-12 d-flex justify-content-center">
                                 <pagination [totalItems]="totalItems" [(ngModel)]="currentPage" [itemsPerPage]="pageSize" [maxSize]="maxSize" (pageChanged)="changePage($event)" class="pagination-sm">
                                 </pagination>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
