--- a/src/app/components/sucursal/sucursal.component.html
+++ b/src/app/components/sucursal/sucursal.component.html
@@ -11,7 +11,7 @@
 
                         <a routerLink="/admin/create-sucursal" routerLinkActive="router-link-active" class="ordena btn btn-success float-right mb-3">Nuevo</a>
 
-                            <input type="text" value="" class=" float-md-right mr-3 mt-2" placeholder="Search...">
+                            <input type="text" value="" class=" float-md-right mr-3 mt-2" placeholder="Search..." [(ngModel)]="keyword" (ngModelChange)="searchByKeyword()">
 
                             <div class="dropdown ordena float-md-right mr-3">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
